# prediction-markets-lab

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STATUS.html  README.md  build-report.md  mockup.html  pyproject.toml
.claude/: tasklist.md
.github/workflows/: tests.yml
.hacf/prediction-markets/: actionability-check.txt  answers.txt  behavior-metadata.json  boundary.txt  design-system.md  disambiguated.txt  exclusion-registry.json  feature-discoveries-summary.md  feature-discoveries.json  hacf-create-confirmation.html  hacf-create-proposal.html  hacf-review-confirmation.html  idea.txt  implementation-plan.json  interaction-map.json  metadata-quality-report.json  metadata-validation-report.json  north-star.txt  pseudocode-verification.json  rules-api.json  rules-conflicts.json  rules-database-seed.json  rules-database.json  rules-design.json  rules-framework.json  rules-html.json  rules-lock.json  rules-manifest.json  rules-precedence.json  screen-inventory.json  semantic-spec.json  stack-verification.json  state-chain.json  state.json  stated-intent.txt  tech-stack.json  terminal-states.json  transition-graph.json  verifiedLibraries.json  (+1 more)
docs/: index.html
pseudocode/: brier_score.pseudo.md  kelly_fraction.pseudo.md  kelly_strategy.pseudo.md  max_drawdown.pseudo.md  run_backtest.pseudo.md  sharpe_ratio.pseudo.md  slippage_model.pseudo.md  sortino_ratio.pseudo.md  strategy_interface.pseudo.md  win_rate.pseudo.md
results/: contrarian_underdog_v1.json  smoke_kelly_v2.json  smoke_momentum.json
scripts/: fetch_manifold.py  fetch_polymarket.py
tests/: conftest.py
(+185 files in other folders)
