[project]
name = "predmarkets"
version = "0.1.0"
description = "Prediction markets paper trader and strategy backtester"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic>=2.9,<3",
    "uvicorn[standard]>=0.30,<0.31",
    "sqlalchemy>=2.0.36,<3",
    "alembic>=1.13,<2",
    "aiosqlite>=0.20,<0.21",
    "asyncpg>=0.29,<0.30",
    "pandas>=2.2,<2.3",
    "numpy>=1.26,<2",
    "scipy>=1.14,<1.15",
    "httpx>=0.27,<0.28",
    "websockets>=13,<14",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5,<6",
    "respx>=0.21,<0.22",
    "freezegun>=1.5,<2",
    "hypothesis>=6,<7",
    "ruff>=0.6,<0.7",
    "mypy>=1.11,<2",
]

[project.scripts]
predmarkets = "predmarkets.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/predmarkets"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
